fix(navbar): fixed dom jump on searchbar focus

--- a/src/components/NavBar/_NavBar.scss
+++ b/src/components/NavBar/_NavBar.scss
@@ -68,16 +68,16 @@
         &-input {
             all: unset;
             width: 100%;
-            height: 4rem;
+            height: 3.8rem;
             padding: 0 1.2rem 0 4rem;
             border-radius: 4px;
-            border: 1px solid abstracts.color('secondary', 'Mercury');
+            outline: 1px solid abstracts.color('secondary', 'Mercury');
             background-color: abstracts.color('secondary', 'Alabaster');
             color: abstracts.color('primary', 'BrainFlix-Black');
-            transition: all 0.33s ease-in-out;
+            transition: all 150ms ease-in-out;
 
             &:focus {
-                border: 2px solid abstracts.color('primary', 'BrainFlix-Blue');
+                outline: 2px solid abstracts.color('primary', 'BrainFlix-Blue');
             }
         }
     }
